adds text highlight on typeracer example

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Need For Type</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
   <body>
     <div class="window">
@@ -10,19 +11,15 @@
         <div class="buttons">
           <div class="close">
             <a class="closebutton" href="#"><span><strong>x</strong></span></a>
-            <!-- close button link -->
           </div>
           <div class="minimize">
             <a class="minimizebutton" href="#"><span><strong>&ndash;</strong></span></a>
-            <!-- minimize button link -->
           </div>
           <div class="zoom">
             <a class="zoombutton" href="#"><span><strong>+</strong></span></a>
-            <!-- zoom button link -->
           </div>
         </div>
         Need For Type
-        <!-- window title -->
       </div>
       <div class="content">
         <pre>
@@ -34,19 +31,25 @@
                                                /____/_/
         </pre>
       <div class="information">
+        <div class="about">
+          <div class="title">
+            <h3 class="about">About</h3>
+          </div>
+          <p>Need-for-type is a terminal type racer to help everyone pass the time and have some fun while improving your typing speed by being able to compete with people from all around the world.</p>
+        </div>
+      </div>
+      <div class="try-out">
+        <div class="title">
+          <h3>Try it out</h3>
+        </div>
+        <p class="try-text">Hello my name is Tiago it is a pleasure</p>
+      </div>
         <div class="install">
           <div class="title">
             <h3>Install</h3>
           </div>
           <p>gem install need-for-type</p>
         </div>
-        <div class="about">
-          <div class="title">
-            <h3 class="about">About</h3>
-          </div>
-          <p>Need-for-type is a terminal type racer to help everyone pass the time and have some fun inbetween coding sessions</p>
-        </div>
-      </div>
       <div class="contribute">
         <div class="title">
           <h3>Contribute</h3>
@@ -64,5 +67,6 @@
       </div>
     </div>
   </div>
+  <script type="text/javascript" src="assets/javascripts/index.js"></script>
 </body>
 </html>
