fixes styles for try it our section and adds dummy text with easter egg

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <div class="titlebar">
         <div class="buttons">
           <div class="close">
-            <a class="closebutton" href="#"><span><strong>x</strong></span></a>
+            <a class="closebutton" href="#"><span class="btn"><strong>x</strong></span></a>
           </div>
           <div class="minimize">
-            <a class="minimizebutton" href="#"><span><strong>&ndash;</strong></span></a>
+            <a class="minimizebutton" href="#"><span class="btn"><strong>&ndash;</strong></span></a>
           </div>
           <div class="zoom">
-            <a class="zoombutton" href="#"><span><strong>+</strong></span></a>
+            <a class="zoombutton" href="#"><span class="btn"><strong>+</strong></span></a>
           </div>
         </div>
         Need For Type
@@ -40,15 +40,15 @@
       </div>
       <div class="try-out">
         <div class="title">
-          <h3>Try it out</h3>
+          <h3>Try it out (Start typing)</h3>
         </div>
-        <p class="try-text">Hello my name is Tiago it is a pleasure</p>
+        <p class="try-text">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
       </div>
         <div class="install">
           <div class="title">
             <h3>Install</h3>
           </div>
-          <p>gem install need-for-type</p>
+          <p>gem install 'need-for-type'</p>
         </div>
       <div class="contribute">
         <div class="title">
