--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
+
   <body>
     <div class="window">
       <div class="titlebar">
@@ -21,6 +22,7 @@
         </div>
         Need For Type
       </div>
+
       <div class="content">
         <pre>
     _   __              __   ____            ______
@@ -30,43 +32,49 @@
 /_/ |_/\___/\___/\__,_/  /_/  \____/_/     /_/  \__, / .___/\___/
                                                /____/_/
         </pre>
-      <div class="information">
-        <div class="about">
-          <div class="title">
-            <h3 class="about">About</h3>
+
+        <div class="information">
+          <div class="about">
+            <div class="title">
+              <h3 class="about">About</h3>
+            </div>
+            <p>need-for-type is a terminal type racer to help you improve your typing skills while competing with other people from all around the world.</p>
           </div>
-          <p>Need-for-type is a terminal type racer to help everyone pass the time and have some fun while improving your typing speed by being able to compete with people from all around the world.</p>
         </div>
-      </div>
-      <div class="try-out">
-        <div class="title">
-          <h3>Try it out (Start typing)</h3>
+
+        <div class="try-out">
+          <div class="title">
+            <h3>Try it out (Start typing)</h3>
+          </div>
+          <p class="try-text">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
         </div>
-        <p class="try-text">The path of the righteous man is beset on all sides by the iniquities of the selfish and the tyranny of evil men. Blessed is he who, in the name of charity and good will, shepherds the weak through the valley of darkness, for he is truly his brother's keeper and the finder of lost children. And I will strike down upon thee with great vengeance and furious anger those who would attempt to poison and destroy My brothers. And you will know My name is the Lord when I lay My vengeance upon thee.</p>
-      </div>
+
         <div class="install">
           <div class="title">
             <h3>Install</h3>
           </div>
-          <p>gem install 'need-for-type'</p>
+          <p>gem install 'need_for_type'</p>
         </div>
-      <div class="contribute">
-        <div class="title">
-          <h3>Contribute</h3>
+
+        <div class="contribute">
+          <div class="title">
+            <h3>Contribute</h3>
+          </div>
+          <p><a href="https://github.com/need-for-type" target="_blank">>>> https://github.com/need-for-type <<<</a></p>
         </div>
-        <p><a href="https://github.com/jbernardo95/need-for-type" target="_blank">>>> https://github.com/jbernardo95/need-for-type <<<</a></p>
-      </div>
-      <div class="team">
-        <div class="title">
-          <h3>Team</h3>
+
+        <div class="creators">
+          <div class="title">
+            <h3>Creators</h3>
+          </div>
+          <ul>
+            <li>Joao Bernardo - <a href="https://github.com/jbernardo95" target="_blank">https://github.com/jbernardo95</a></li>
+            <li>Tiago Botelho - <a href="https://github.com/tiagonbotelho" target="_blank">https://github.com/tiagonbotelho</a></li>
+          </ul>
         </div>
-        <ul>
-          <li>Joao Bernardo - <a href="https://github.com/jbernardo95" target="_blank">https://github.com/jbernardo95</a></li>
-          <li>Tiago Botelho - <a href="https://github.com/tiagonbotelho" target="_blank">https://github.com/tiagonbotelho</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <script type="text/javascript" src="assets/javascripts/index.js"></script>
-</body>
+
+      </div> <!-- .content -->
+    </div> <!-- .window -->
+    <script type="text/javascript" src="assets/javascripts/index.js"></script>
+  </body>
 </html>
