--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Need For Type</title>
+    <title>Need for Type</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
@@ -53,7 +53,7 @@
           <div class="title">
             <h3>Install</h3>
           </div>
-          <p>gem install 'need_for_type'</p>
+          <p>gem install need_for_type</p>
         </div>
 
         <div class="contribute">
