--- a/index.html
+++ b/index.html
@@ -24,14 +24,49 @@
       </div>
 
       <div class="content">
+        <div class="logo">
+        <pre style="font: 5px/3px monospace;">
+                       `@                 #'
+                      @@@'                @@@.
+                    #@@@@@               @@@@@@
+                  :`#@@@@@@             `@@@@@@ #
+                `;   @@@'@@             @@.@@@.  `;
+               @@    ;@  ,@@           ;@@  ;@    @@`
+             +@@@@   @    @@,          @@    @`  ,@@@@
+           ,. @@@@`'@@#    @@         @@#    @@@ @@@@  #
+          '   `@@+ @@@@  #@@@+        @@@@  @@@@..@@@   `:
+        @@@    @   :@@@.@@@@@@       @@@@@@;@@@@   '    #@@`
+      '@@@@;  @@    @'  #@@@@@@     .@@@@@@  `@    :@   @@@@#
+    .,  @@@@;@@@.   #    @@: @@`    @@  @@`   `.   @@@@@@@@;  +
+        +@# `@@@@ +@@    :   .@@   '@@   ,    @@@ #@@@# ,@@    ,
+    ;        @@@,,@@@@  @@    @@:  @@    @@. :@@@@ @@@    ,   '
+     : #@'    +   @@@@'@@@@  + @@ @@'#  `@@@@@@@@   .:    @@
+     `@@@@   @.    @;  @@@@,.  #@#@@   #@@@@` `@#    @`  @@@@@
+      @@@@@'@@@   `    ,@@'     @@@.    `@@@    ;   #@@@`@@@@
+       @@: @@@@' @@@    @       ;@@       ;`   ;@@` @@@@  @@'
+       #    @@@.@@@@, '         @@@`        #  @@@@ @@@:   ;
+        `   ''   @@@@,         +@@@@          @@@@+  `@    .
+        :   @    @@+           @@ @@;          .@@    @:  +
+         ;@@@+   #            @@;  @@            '    @@@`
+         `@@@@ ;             `@@   #@#             @ @@@@#
+          @@@@:              @@`    @@               @@@@
+           @#               :@@     ,@@               ,@:
+                            @@       @@.
+                           #@#        @@
+                           @@         @@'
+                          @@:          @@
+                         `@@           '@@
+                         +@`            @@
+       </pre>
         <pre>
-    _   __              __   ____            ______
-   / | / /__  ___  ____/ /  / __/___  _____ /_  __/_  ______  ___
-  /  |/ / _ \/ _ \/ __  /  / /_/ __ \/ ___/  / / / / / / __ \/ _ \
- / /|  /  __/  __/ /_/ /  / __/ /_/ / /     / / / /_/ / /_/ /  __/
-/_/ |_/\___/\___/\__,_/  /_/  \____/_/     /_/  \__, / .___/\___/
-                                               /____/_/
+      _   __              __   ____            ______
+     / | / /__  ___  ____/ /  / __/___  _____ /_  __/_  ______  ___
+    /  |/ / _ \/ _ \/ __  /  / /_/ __ \/ ___/  / / / / / / __ \/ _ \
+   / /|  /  __/  __/ /_/ /  / __/ /_/ / /     / / / /_/ / /_/ /  __/
+  /_/ |_/\___/\___/\__,_/  /_/  \____/_/     /_/  \__, / .___/\___/
+                                                 /____/_/
         </pre>
+     </div>
 
         <div class="information">
           <div class="about">
