Fix CSS alignment in team section

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <p><a href="https://github.com/need-for-type" target="_blank"> >>> https://github.com/need-for-type <<< </a></p>
         </div>
 
-        <div class="creators">
+        <div class="team">
           <div class="title">
             <h3>Creators</h3>
           </div>
