--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <title>Need for Type</title>
     <link rel="stylesheet" type="text/css" href="assets/stylesheets/index.css">
+    <link rel="shortcut icon" type="image/png" href="assets/favicon.ico"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   </head>
 
